<resources>
    <string name="app_name" translatable="false">要 Fun</string>
    <string name="app_password" translatable="false">请输入密码</string>
    <string name="new_password" translatable="false">请输入新密码</string>
    <string name="app_account" translatable="false">请输入账号</string>
    <string name="app_phone" translatable="false">请输入手机号</string>
    <string name="app_verify" translatable="false">请输入验证码</string>
    <string name="app_froget" translatable="false">忘记密码</string>
    <string name="app_login" translatable="false">登陆</string>
    <string name="app_about" translatable="false">关于yaoFUN</string>
    <string name="app_register" translatable="false">注册</string>
    <string name="app_welcome" translatable="false">欢迎来到要FUN</string>
    <string name="app_hello" translatable="false">你好，</string>
    <string name="app_other" translatable="false">其他登录方式</string>
    <string name="app_city" translatable="false">北京</string>
    <string name="app_day" translatable="false">2019年9月 星期一</string>
    <string name="app_month" translatable="false">【乙亥 八月十一】</string>
    <string name="app_taboo" translatable="false">忌胆怯</string>
    <string name="app_code" translatable="false">9</string>
    <string name="app_ticket" translatable="false">验票</string>
    <string name="app_home" translatable="false">FUN</string>
    <string name="app_fun" translatable="false">FUN团</string>
    <string name="app_message" translatable="false">消息</string>
    <string name="app_me" translatable="false">我的</string>
    <string name="fun_create" translatable="false">创建FUN团</string>
    <string name="fun_open" translatable="false">发起聚会</string>
    <string name="fun_name" translatable="false">名称</string>
    <string name="fun_look" translatable="false">在人群中多了你一眼</string>
    <string name="fun_resume" translatable="false">简介</string>
    <string name="fun_love" translatable="false">有时候爱是需要理由的</string>
    <string name="fun_introduce" translatable="false">详细介绍</string>
    <string name="fun_do" translatable="false">让我们更多得了解你想做什么</string>
    <string name="fun_activity" translatable="false">活动区域</string>
    <string name="fun_join" translatable="false">吸引更多同城小伙伴加入</string>
    <string name="fun_interest" translatable="false">兴趣领域</string>
    <string name="fun_interestfun" translatable="false">选择FUN团的兴趣领域</string>
    <string name="fun_immediately" translatable="false">立即创建</string>
    <string name="fun_newpeople" translatable="false">1.新成员加入需审核</string>
    <string name="fun_newpeopleout" translatable="false">2.FUN团以外用户报名团内活动需审核</string>
    <string name="fun_jointure" translatable="false">加入FUN团确认</string>
    <string name="openfun_title" translatable="false">标题</string>
    <string name="openfun_hert" translatable="false">来一个直入人心的标题吧</string>
    <string name="openfun_funtuan" translatable="false">FUN团</string>
    <string name="openfun_choose" translatable="false">请选择活动所属FUN团</string>
    <string name="openfun_activity" translatable="false">活动地点</string>
    <string name="openfun_no" translatable="false">让我找到你不管东西南北</string>
    <string name="openfun_particular" translatable="false">详细地址</string>
    <string name="openfun_such" translatable="false">如门牌号等</string>
    <string name="openfun_starttime" translatable="false">开始时间</string>
    <string name="openfun_finishtime" translatable="false" >结束时间</string>
    <string name="openfun_choosestarttime" translatable="false">请选择活动开始时间</string>
    <string name="openfun_choosefinishtime" translatable="false">请选择活动结束时间</string>
    <string name="openfun_applycost" translatable="false">报名费</string>
    <string name="openfun_applyfree" translatable="false">免费</string>
    <string name="openfun_applypeople" translatable="false">报名人数</string>
    <string name="openfun_applypeoplecontent" translatable="false">2人起，不包括发起人自己</string>
    <string name="openfun_detailactivity" translatable="false">活动详情</string>
    <string name="openfun_pleasedetailactivity" translatable="false">请详细描述你的活动</string>
    <string name="openfun_interests" translatable="false">兴趣标签</string>
    <string name="openfun_interestspeople" translatable="false">精准的兴趣标签，可以吸引志同道合的人</string>
    <string name="openfun_issue" translatable="false">立即发布</string>
    <string name="homedetails_share" translatable="false">分享</string>
    <string name="homedetails_alter" translatable="false">修改</string>
    <string name="homedetails_delete" translatable="false">删除</string>
    <string name="maillist" translatable="false">通讯录</string>
    <string name="setting" translatable="false">设置</string>
    <string name="privacy_policy" translatable="false">隐私政策</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>
