<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item1"
        android:checkable="false"
        android:icon="@drawable/homedetails_share"
        android:title="@string/homedetails_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/item2"
        android:checkable="false"
        android:icon="@drawable/homedetails_alter"
        android:title="@string/homedetails_alter"
        app:showAsAction="never" />
    <item
        android:id="@+id/item3"
        android:checkable="false"
        android:icon="@drawable/homedetails_delete"
        android:title="@string/homedetails_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/item4"
        android:checkable="false"
        android:icon="@drawable/homedetails_report"
        android:title="@string/homedetails_inform"
        app:showAsAction="never" />


</menu>