<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="18dp"
    tools:context=".activity.LandingActivity">

    <LinearLayout
        android:id="@+id/edit"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100">

        <ImageView
            android:layout_width="@dimen/dp_13"
            android:layout_height="@dimen/dp_13"
            android:layout_marginTop="@dimen/dp_34"
            android:layout_marginRight="@dimen/dp_345"
            android:src="@mipmap/guanbi" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/register"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_alignParentRight="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dp_34"
            android:text="@string/app_register"
            android:textColor="@color/colorblack"
            android:textSize="@dimen/sp_13" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/dp_91"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_hello"
            android:textColor="@color/colorblack"
            android:textSize="@dimen/sp_23" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_welcome"
            android:textColor="@color/colorblack"
            android:textSize="@dimen/sp_23" />
    </LinearLayout>


    <com.balala.yaofun.util.CustomEditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_217"
        android:hint="@string/app_account"
        android:inputType="phone"
        android:maxLength="13"
        android:maxLines="1"
        android:textColor="@color/colorblack"
        android:textSize="@dimen/sp_15" />


    <EditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_278"
        android:layout_marginBottom="@dimen/dp_363"
        android:hint="@string/app_password"
        android:maxLines="1"
        android:password="true"
        android:textSize="@dimen/sp_15" />

    <ImageView
        android:id="@+id/landing_clear"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dp_290"
        android:layout_marginRight="@dimen/dp_35"
        android:src="@mipmap/delete"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/watch"
        android:layout_width="@dimen/dp_18"
        android:layout_height="@dimen/dp_11"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dp_295"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_265"
        android:background="@drawable/landing_eyes"
        android:button="@null" />

    <TextView
        android:id="@+id/froget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dp_323"
        android:layout_marginBottom="@dimen/dp_320"
        android:text="@string/app_froget"
        android:textColor="@color/colordeepgray"
        android:textSize="@dimen/sp_15" />


    <Button
        android:id="@+id/activity_go"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_360"
        android:background="@drawable/yuan"
        android:text="@string/app_login"
        android:textColor="@color/colorwhite"
        android:textSize="@dimen/sp_13" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_458"
        android:orientation="vertical">

        <TextView
            android:layout_width="@dimen/dp_74"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_other"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_100"
            android:textColor="@color/colorgray"
            android:textSize="@dimen/sp_12" />

        <ImageView
            android:id="@+id/wechat"
            android:layout_width="@dimen/dp_47"
            android:layout_height="@dimen/dp_47"
            android:layout_marginBottom="@dimen/dp_40"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"

            android:src="@mipmap/weixin" />
    </RelativeLayout>
</RelativeLayout>